--- a/src/app/pages/auth/auth.component.scss
+++ b/src/app/pages/auth/auth.component.scss
@@ -9,11 +9,9 @@ body{
 	background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
 }
 .main{
-	width: 350px;
-	height: 500px;
-	background: red;
+	width: 380px;
+	height: 520px;
 	overflow: hidden;
-	background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38") no-repeat center/ cover;
 	border-radius: 10px;
 	box-shadow: 5px 20px 50px #000;
 }
@@ -36,19 +34,17 @@ label{
 	transition: .5s ease-in-out;
 }
 input{
-	width: 60%;
-	height: 10px;
+	width: 65%;
+	height: 40px;
 	background: #e0dede;
-	justify-content: center;
-	display: flex;
-	margin: 20px auto;
-	padding: 12px;
-	border: none;
+	padding: 15px 12px;
+	border: 1px solid #ccc;
+	margin: auto;
 	outline: none;
 	border-radius: 5px;
 }
 button{
-	width: 60%;
+	width: 65%;
 	height: 40px;
 	margin: 10px auto;
 	justify-content: center;
@@ -88,3 +84,17 @@ button:hover{
 #chk:checked ~ .signup label{
 	transform: scale(.6);
 }
+.p-error {
+	color: red;
+	margin-top: 7px !important;
+	margin: auto;
+	font-size: 14px;
+}
+.form-item {
+	justify-content: center;
+	flex-direction: column;
+	display: flex;
+	margin: 10px auto;
+	margin-top: 0px;
+}
+
